# federal-policy-intelligence

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
fpi/: __init__.py  cli.py
fpi/comments/: __init__.py  cluster_engine.py  commands.py  comment_analyzer.py  config.py  dashboard.py  memo_generator.py  models.py  regulations_client.py  seed_data.py
fpi/policy/: __init__.py  bm25_index.py  citation_verifier.py  claude_simulator.py  commands.py  config.py  consequences.py  dashboard.py  ingest.py  models.py  scoring.py
fpi/policy/corpus/: dod_ai_ethical_principles_2020.txt  eo_14110_2023_REVOKED.txt  eo_14179_2025.txt  eo_14365_2025.txt  eu_ai_act_article_5.txt  eu_ai_act_article_6.txt  nist_ai_rmf_1_0.txt
fpi/shared/: __init__.py  claude_client.py  demo_mode.py
fpi/velocity/: __init__.py  brief.py  commands.py  config.py  dashboard.py  federal_register_client.py  seed_data.py  velocity_engine.py
tests/: test_claude_client.py  test_demo_mode.py
tests/comments/: test_cluster_engine.py  test_comment_analyzer.py  test_regulations_client.py  test_seed_data.py
tests/policy/: test_bm25_index.py  test_citation_verifier.py  test_claude_simulator.py  test_cli.py  test_consequences.py  test_ingest.py  test_models.py  test_scoring.py
tests/velocity/: test_brief.py  test_federal_register_client.py  test_seed_data.py  test_velocity_engine.py
